--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   "author": "Jiri Hybek, Hexio a.s. <jiri.hybek@hexio.io>",
   "license": "Apache-2.0",
   "dependencies": {
-    "handlebars": "^4.2.0",
-    "meta2-logger": "^2.1.0",
-    "request": "2.83.0"
+    "handlebars": "4.2.0",
+    "meta2-logger": "2.1.0",
+    "request": "2.88.0"
   },
   "devDependencies": {
-    "@types/node": "^7.0.18",
-    "@types/request": "^2.47.0",
-    "tslint": "^5.8.0",
-    "typescript": "^2.1.6"
+    "@types/node": "7.0.18",
+    "@types/request": "2.48.3",
+    "tslint": "5.8.0",
+    "typescript": "2.1.6"
   }
 }
