--- a/deployment/clusterRole.yml
+++ b/deployment/clusterRole.yml
@@ -6,8 +6,9 @@ rules:
 - apiGroups:
   - ""
   resources:
-  - 'nodes'
-  - 'services'
+  - "nodes"
+  - "services"
+  - "services/status"
   verbs:
   - get
   - list
