+ Add support for HA Proxy Prometheus exporter

--- a/haproxy.template.cfg
+++ b/haproxy.template.cfg
@@ -29,6 +29,14 @@ defaults
     timeout check           {{config.timeoutCheck}}
     maxconn                 {{config.maxconn}}
 
+{{#if config.prometheusEnable}}
+listen prometheus
+    mode http
+    bind {{config.prometheusBindAddress}}:{{config.prometheusBindPort}}
+    option http-use-htx
+    http-request use-service prometheus-exporter if { path /metrics }
+{{/if}}
+
 {{#each services}}
 {{#each ports}}
 {{#if valid}}
